Snap conflict, viewport clipping + work in the middle of two faces #50486

Closed
opened 2017-01-20 15:44:30 +01:00 by Nahuel Belich · 8 comments

System Information
win 7 X64
nvidia 1070 Gygabite G1

Blender Version
Broken: hash: b76dbf5

Short description of error

Trying to snap on a object that its between two faces of an other object while the viewport its clipping, the snap will be done on the surface of the faces out of the clipped area.

Exact steps for others to reproduce the error
1-Snap_viewport crop.blend
2-scale the selected face (from objet "Plane"), should pop to the plane outside of the croped area.
3- select the object that its under the white grease pencil note and as it says . ..
4-with that object selected go into edit mode selected all faces
5- hit "P" and separate by loose faces
6- exit edit mode and try to repeat from step two, it should work.

**System Information** win 7 X64 nvidia 1070 Gygabite G1 **Blender Version** Broken: hash: b76dbf5 **Short description of error** Trying to snap on a object that its between two faces of an other object while the viewport its clipping, the snap will be done on the surface of the faces out of the clipped area. **Exact steps for others to reproduce the error** 1-[Snap_viewport crop.blend](https://archive.blender.org/developer/F437388/Snap_viewport_crop.blend) 2-scale the selected face (from objet "Plane"), should pop to the plane outside of the croped area. 3- select the object that its under the white grease pencil note and as it says . .. 4-with that object selected go into edit mode selected all faces 5- hit "P" and separate by loose faces 6- exit edit mode and try to repeat from step two, it should work.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @mano-wii

Added subscriber: @mano-wii

The steps to reproduce the bug are somewhat confusing :
But I think I understood the problem by the description ;) ...

What is going on:
The snap functions work separate from what is drawn in OpenGL, and does not consider the cropped area.
Adding this feature can be a bit tricky, but it's a good point to add among the ToDo items.

Let's wait to see the decision of the developers

The steps to reproduce the bug are somewhat confusing :\ But I think I understood the problem by the description ;) ... **What is going on:** The snap functions work separate from what is drawn in OpenGL, and does not consider the cropped area. Adding this feature can be a bit tricky, but it's a good point to add among the ToDo items. Let's wait to see the decision of the developers
Author

lets see if it is a bit more clear here
https://youtu.be/EAobUHJ5s30

lets see if it is a bit more clear here https://youtu.be/EAobUHJ5s30

In #50486#413759, @NahuelBelich wrote:
lets see if it is a bit more clear here
https://youtu.be/EAobUHJ5s30

I saw the video now. Thanks for the clarification!
It really is something that deserves attention, and I think I have a solution to this problem :)
I'll see what I can do

> In #50486#413759, @NahuelBelich wrote: > lets see if it is a bit more clear here > https://youtu.be/EAobUHJ5s30 I saw the video now. Thanks for the clarification! It really is something that deserves attention, and I think I have a solution to this problem :) I'll see what I can do

This issue was referenced by 88b0b22914

This issue was referenced by 88b0b22914cc2333b022080d2e2f1f235f924db7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50486
No description provided.