fix T50486: Don't always do the `ray_start_correction` in the ortho view

You need to make sure that ray_start is really far away, because even in the Orthografic view, in some cases, the ray can start inside the object